--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://mrthnrldo.github.io",
+  "homepage" : "/mrthnrldo.github.io",
   "name": "project",
   "version": "0.1.0",
   "private": true,
